--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ description = "A Python library for tracking and analysis of plasma membrane pro
 authors = [
     { name = "Adam Harmanec", email = "harmanec@utia.cas.cz" }
 ]
-
 requires-python = ">=3.10"
 
 dependencies = [
@@ -24,3 +23,9 @@ dependencies = [
     "torch==1.13.1",
     "torchvision==0.14.1",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
